--- a/html_laguge.html
+++ b/html_laguge.html
@@ -6,7 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="html_languge.css">
-    <style></style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
+body{
+    background-color: black;
+    color: white;
+    font-family: 'cairo',sans-serif;
+}
+img{
+    width: 850px;
+    height: 950px;
+}
+@media (max-width:715px) {
+    img{
+        width: 500px;
+        height: 700px;
+    }
+}
+@media (max-width:510px){
+    img{
+        width: 500px;
+        height: 550px;
+    }
+    
+}
+
+.css{
+    text-decoration: none;
+    font-family: sans-serif;
+    background-color: rgb(0, 38, 255);
+    color: rgb(255, 255, 255);
+    padding: 50px;
+    border-radius: 40px;
+    margin-left: 50px;
+
+}
+.java_script{
+    text-decoration: none;
+    font-family: sans-serif;
+    margin-left: 50px;
+    padding: 50px;
+    background-color: rgb(255, 196, 0);
+    color: black;
+    border-radius: 50px;
+    
+}
+header{
+    background-color: rgb(26, 26, 26);
+    padding: 50px;
+}
+.sign{
+    text-decoration: none;
+    padding: 20px;
+    background-color: rgb(0, 110, 255);
+    color: white;
+    border: 1 solid white;
+    border-radius: 20px;
+}
+    </style>
     <title>ما هي لغة html</title>
     <link rel="icon" href="html.png">
 </head>
